TP RRT: minor changes

--- a/tps/tp_rrt/tp.tex
+++ b/tps/tp_rrt/tp.tex
@@ -23,7 +23,7 @@
 \maketitle
 
 \section{Rapidly-exploring Random Tree}
-In this part, you are provided with a robot arm that has 2 links is able to move in a 2D plane only. Your task is to implement Rapidly-exploring Random Tree (RRT), a classical sampling-based motion planning algorithms named after its data structure, and study the parameters that govern its behaviors.
+You are provided with a robot arm that has 2 links is able to move in a 2D plane only. Your task is to implement Rapidly-exploring Random Tree (RRT), a classical sampling-based motion planning algorithms named after its data structure, and study the parameters that govern its behaviors.
 
 \subsection{Code Overview}
 The starter code for RRT is under the \texttt{rrt} folder. Here is a brief overview.
